cmake_minimum_required(VERSION 4.0)
project(Assignment1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment1 main.cpp
        polynomial.h
        texteditor.h
        uno.h
        Luqman-Shahzad_507599_polynomial.cpp_507599_polynomial.cpp
        Luqman-Shahzad_507599_texteditor.cpp
        Luqman-Shahzad_507599_uno.cpp)
